--- a/slides/02_intro_to_r_and_working_with_data.html
+++ b/slides/02_intro_to_r_and_working_with_data.html
@@ -95,7 +95,7 @@ Bottom left
 
 .pull-right[
 Top right
-* Environment - where to see your ojects  
+* Environment - where to see your objects  
 * History - a list of every command you sent  
 --- 
 Bottom right  
@@ -1451,6 +1451,25 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
 ]
 
 ---
+# Summary
+
+
+* write commands in a script, edit when incorrect  
+* comment your scripts  
+* use white space and newlines  
+* the assignment operator is `&lt;-` (alt-minus)  
+* the pipe operator is ` %&gt;%` (ctl-shift-m)  
+* objects you're created can be seen in the Environment window  
+* data is read in to R from files into dataframes  
+* the dataframe is the most commonly used data structure in analysis  
+* you'll eventually get used to the manual  
+* a `ggplot` has a `data` argument and an `aesthetic` argument; layers are added with a `+`; `geoms`dtermine how the data are plotted  
+* `ggplot` makes it easy to transition between plot types  
+* Use RStudio projects and organise your analysis into separate folders (more tomorrow)  
+* use relative paths (more tomorrow)  
+
+
+---
 # References
 
 &lt;a name=bib-ggplot2&gt;&lt;/a&gt;[Wickham, H.](#cite-ggplot2) (2016). _ggplot2:
@@ -1468,7 +1487,7 @@ _JOSS_ 4.43, p. 1686.
 
 class: inverse
 
-# 🎉 Congratulations! Keep practising! 🎉 
+# 🎉 Congratulations! Keep practising! 🎈 
 
 ---
 # Introduction to Reproducibility in R
