--- a/slides/03_rstudio_projects.html
+++ b/slides/03_rstudio_projects.html
@@ -73,10 +73,6 @@ For example the absolute path for a file, `beewing.txt` can be:
 
   * web: `http://www-users.york.ac.uk/~er13/58M_BDS_2019/data/beewing.txt`  
 
---
-
-## Demonstration
-
 ---
 # What is a path?
 
@@ -361,7 +357,7 @@ https://whattheyforgot.org/project-oriented-workflow.html&gt;. Accessed:
 
 class: inverse
 
-# 🥳 Congratulations! Keep practising! 🎉 
+# 🎈 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
