Xie credited for xaringan; module 06 in frist draft

--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -404,7 +404,10 @@ Suppose we had just 3 individuals in each of two populations:
 
 ---
 # References
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
 
+]
 &lt;a name=bib-Bryan2018-hl&gt;&lt;/a&gt;[Bryan, J.](#cite-Bryan2018-hl) (2018).
 "Excuse Me, Do You Have a Moment to Talk About Version Control?" In:
 _Am. Stat._ 72.1, pp. 20-27.
@@ -426,9 +429,17 @@ e1003285.
 al.](#cite-Wilson2014-ij) (2014). "Best practices for scientific
 computing". En. In: _PLoS Biol._ 12.1, p. e1001745.
 
+...continued
+---
+# References
+
 &lt;a name=bib-Wilson2017-cp&gt;&lt;/a&gt;[Wilson, G, J. Bryan, et
 al.](#cite-Wilson2017-cp) (2017). "Good enough practices in scientific
 computing". En. In: _PLoS Comput. Biol._ 13.6, p. e1005510.
+
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
+Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
 
 ---
 # Introduction to Reproducibility in R
