--- a/slides/02_intro_to_r_and_working_with_data.html
+++ b/slides/02_intro_to_r_and_working_with_data.html
@@ -1471,7 +1471,10 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
 
 ---
 # References
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
 
+]
 &lt;a name=bib-ggplot2&gt;&lt;/a&gt;[Wickham, H.](#cite-ggplot2) (2016). _ggplot2:
 Elegant Graphics for Data Analysis_. Springer-Verlag New York. ISBN:
 978-3-319-24277-4. URL:
@@ -1481,13 +1484,17 @@ Elegant Graphics for Data Analysis_. Springer-Verlag New York. ISBN:
 al.](#cite-Wickham2019-ml) (2019). "Welcome to the Tidyverse". In:
 _JOSS_ 4.43, p. 1686.
 
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
+Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
+
 
 
 ---
 
 class: inverse
 
-# 🎉 Congratulations! Keep practising! 🎈 
+# 🎂 Congratulations! Keep practising! 🎈 
 
 ---
 # Introduction to Reproducibility in R
