--- a/slides/03_rstudio_projects.html
+++ b/slides/03_rstudio_projects.html
@@ -344,12 +344,19 @@ This session has set you up for the [Tidying data and the tidyverse including th
 
 ---
 # References
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
 
+]
 &lt;a name=bib-Bryan-Hester&gt;&lt;/a&gt;[Bryan, J. and J.
 Hester](#cite-Bryan-Hester) _Chapter 2 Project-oriented workflow | What
 They Forgot to Teach You About R_. &lt;URL:
 https://whattheyforgot.org/project-oriented-workflow.html&gt;. Accessed:
 2019-9-26.
+
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
+Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
 
 
 
@@ -357,7 +364,7 @@ https://whattheyforgot.org/project-oriented-workflow.html&gt;. Accessed:
 
 class: inverse
 
-# 🎈 Congratulations! Keep practising! 🎉 
+# 🎈 Congratulations! Keep practising! 🎈 
 
 ---
 # Introduction to Reproducibility in R
