--- a/slides/04_tidying_data_and_the_tidyverse.html
+++ b/slides/04_tidying_data_and_the_tidyverse.html
@@ -710,7 +710,7 @@ str_extract(one_description, "GN=[^\\s]+") %&gt;%
 ```
 
 --
-## 🥳
+## 🎈
 
 ---
 # Case study
@@ -822,6 +822,10 @@ sol2 &lt;- sol2 %&gt;%
 
 ---
 # References
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
+
+]
 
 &lt;a name=bib-magrittr&gt;&lt;/a&gt;[Bache, S. M. and H. Wickham](#cite-magrittr)
 (2014b). _magrittr: A Forward-Pipe Operator for R_. R package version
@@ -837,13 +841,17 @@ _tidyverse: Easily Install and Load the 'Tidyverse'_. R package version
 al.](#cite-Wickham2019-ml) (2019). "Welcome to the Tidyverse". In:
 _JOSS_ 4.43, p. 1686.
 
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
+Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
+
 
 
 ---
 
 class: inverse
 
-# 🎈 Congratulations! Keep practising! 🎉 
+# 🎉 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
