--- a/slides/05_advanced_data_import.html
+++ b/slides/05_advanced_data_import.html
@@ -224,7 +224,7 @@ readLines(file, n = 2)
 ## [1] "Code\tDescription" "A00\t\"Cholera\""
 ```
 
-It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵️‍♂️
+It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵
 
 ---
 # Locally stored text files
@@ -490,7 +490,7 @@ airquality &lt;- do.call(rbind, df_list)
 
 --
 
-🙋 You now have a dataframe containing all the data in the twenty files.
+😀 You now have a dataframe containing all the data in the twenty files.
 
 ---
 # Reading multiple files
@@ -1090,6 +1090,11 @@ data$searchResult$resourceHitCount
 ---
 # References
 
+.footnote[
+Slides made with with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))
+
+]
+
 &lt;a name=bib-Dowle_Srinivasan_2019&gt;&lt;/a&gt;[Dowle, M. and A.
 Srinivasan](#cite-Dowle_Srinivasan_2019) (2019). _data.table: Extension
 of `data.frame`_. R package version 1.12.6. URL:
@@ -1108,13 +1113,16 @@ _haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files_. R package
 version 1.1.2. URL:
 [https://CRAN.R-project.org/package=haven](https://CRAN.R-project.org/package=haven).
 
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019). _xaringan:
+Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
 
 
 ---
 
 class: inverse
 
-# 🎂 Congratulations! Keep practising! 🥳 
+# 🎂 Congratulations! Keep practising! 🎂 
 
 ---
 # Introduction to Reproducibility in R
