some module 6 instructions added to Readme

--- a/slides/06_r_markdown_for_reproducible_reports.html
+++ b/slides/06_r_markdown_for_reproducible_reports.html
@@ -40,7 +40,7 @@ unfinished draft
 
 The successful student will be able to:
 
-* 
+*  
 
 ### 🎬 An instruction to do something!!
 
@@ -57,40 +57,12 @@ By the end of today you'll be able to do something like this:
 ## demo.....
 
 
----
-# What this workshop is and is not
-
-.pull-left[
-
-Is an introduction to
-* R Markdown
-
-]
-
---
-
-.pull-right[
-
-It is not
-* An introduction to statistics&lt;sup&gt;1&lt;/sup&gt;  
-* Magic  
-
-&amp;nbsp;  
-&amp;nbsp;  
-&amp;nbsp;  
-&amp;nbsp;  
-
-]
-
 
 ---
 # Workshop overview
 
 
----
-# A little survey
 
-&lt;iframe src="https://forms.gle/EqQKx4nLQQemQZWb8" width="500" height="700" frameborder="0" marginheight="0" marginwidth="0"&gt;Loading...&lt;/iframe&gt;
 
 ---
 # Reproducible Reports: R Markdown
@@ -725,7 +697,7 @@ Raton, Florida: Chapman and Hall/CRC. URL:
 
 class: inverse
 
-# 🎈 Congratulations! Keep practising! 🎉 
+# 🥳 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
