second draft of markdown; typo in rs proj

--- a/slides/03_rstudio_projects.html
+++ b/slides/03_rstudio_projects.html
@@ -65,7 +65,11 @@ A path can be **absolute** or **relative**
 An Absolute path is given from the root directory of the object. 
 
 For example the absolute path for a file, `beewing.txt` can be:  
-  * windows: `M:/web/58M_BDS_2019/data/beewing.txt`  
+  * windows: `M:/web/58M_BDS_2019/data/beewing.txt`  &lt;sup&gt;1&lt;/sup&gt;
+
+.footnote[
+1. this appears as `M:\web\58M_BDS_2019\data\beewing.txt` in Windows Explorer because Microsoft DOS didn't have directories in 1981 when it was released. It then used the `/` character for 'switches' (instead of the unix convention `-`)
+]
 --
 
   * unix systems: `/users/er13/web/58M_BDS_2019/data/beewing.txt`  
@@ -364,7 +368,7 @@ Presentation Ninja_. R package version 0.12. URL:
 
 class: inverse
 
-# 🎈 Congratulations! Keep practising! 🎈 
+# 🎉 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
