--- a/slides/06_r_markdown_for_reproducible_reports.html
+++ b/slides/06_r_markdown_for_reproducible_reports.html
@@ -44,13 +44,13 @@ The successful student will be able to:
 
 ### 🎬 An instruction to do something!!
 
-&lt;span style=" font-weight: bold;    color: #fdf9f6 !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #25496b !important;" &gt;Extra exercise:&lt;/span&gt; Tidy the data given in [Human development index.csv](raw_data/Human development index.csv) so that all the indices are in a single column with other columns giving the rank, country and year.
+&lt;span style=" font-weight: bold;    color: #fdf9f6 !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #25496b !important;" &gt;Extra exercise:&lt;/span&gt; 
 
 
 ---
 # Goal!
 
-By the end of today you'll be able to do something like this:
+By the end of this session you'll be able to do something like this:
 &lt;!-- standard markdown report in pdf, word or html --&gt;
 &lt;!-- include a table, inline code, a figure,  --&gt;
 
@@ -67,27 +67,35 @@ By the end of today you'll be able to do something like this:
 ---
 # Reproducible Reports: R Markdown
 
+
+
+
 ## How do you work?
 
 * What program do you analyse your data in?  
-
-
 * What program do you plot your data in?  
+--
+&lt;img src="06_r_markdown_for_reproducible_reports_files/figure-html/unnamed-chunk-2-1.png" width="648" /&gt;
+
+---
+# Reproducible Reports: R Markdown 
 
 
-* What program do you use to write up the results to submit to a journal (or similar)?  
+* What program do you use to write up the results to submit to a journal (or similar)?
 
+&lt;img src="06_r_markdown_for_reproducible_reports_files/figure-html/unnamed-chunk-3-1.png" width="648" /&gt;
+
+
+---
+# Reproducible Reports: R Markdown 
 
 * What is your process for getting your summary data, statistical results, tables and figures in to your report?  
-
-
 --
 
 * What do you do when you get additional data that increases your sample sizes?  
-
 --
 
-* What do you do if you wrote in Word formated for one journal and now have to submit in PDF formated for another?
+* What do you do if you wrote in Word formatted for one journal and now have to submit in PDF formatted for another?
 
 ---
 # Reproducible Reports: R Markdown
@@ -103,38 +111,40 @@ This process relies on manual labour.
 If the data changes, the author must repeat the entire process to update the report.
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 90% 90%
-background-size: 200px
+background-image: url(../pics/rmarkdown.png)
+background-position: 80% 80%
+background-size: 180px
 
 # Reproducible Reports: R Markdown
 
-The brilliance of R Markdown &lt;a name=cite-markdown1&gt;&lt;/a&gt;&lt;a name=cite-markdown2&gt;&lt;/a&gt;([Allaire, et al., 2019a](#bib-markdown1); [Xie, et al., 2018a](#bib-markdown2)) is that you can use a **single R Markdown file** to:
+The brilliance of R Markdown &lt;a name=cite-markdown1&gt;&lt;/a&gt;&lt;a name=cite-markdown2&gt;&lt;/a&gt;([Allaire Xie, et al., 2019a](#bib-markdown1); [Xie Allaire, et al., 2018a](#bib-markdown2)) is that you can use a **single R Markdown file** to:
 
 * save and execute code  
 
-* do all your data processing, analysis and plotting
+--
 
-* generate high quality reports that can be shared with an audience
+* do all your data processing, analysis and plotting  
+
+--
+
+* generate high quality reports that can be shared with an audience  
+
+--
 
 
 This is a time-efficient and reproducible way to write!
 
-![cool-emoji](pics/cool.png)
+## 😎
 
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Many output formats are supported!
 
 .pull-left[
-![picture of some of the formats](pics/rmarkdownoutputformats.png)
+![picture of some of the formats](../pics/rmarkdownoutputformats.png)
 ]
 .pull-right[
 * Word
@@ -151,10 +161,6 @@ background-size: 100px
 ]
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Let's get started
@@ -184,11 +190,6 @@ Save a copy of [seal.txt](seals/raw_data/seal.txt) to the 'raw_data' folder
 
 
 ---
-
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Live demo
@@ -196,11 +197,6 @@ background-size: 100px
 Just watch for a while....
 
 ---
-
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Key points from the demo
@@ -218,10 +214,6 @@ background-size: 100px
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Your own R markdown file
@@ -236,13 +228,9 @@ Delete everything except the YAML header the first code chunk
 
 Add your name, and a title 
 
-You could copy and paste a title from [paper.html](seals/paper.html)
+You could copy and paste a title from [paper.html](../seals/paper.html)
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
-
 # Reproducible Reports: R Markdown
 
 ## Your own R markdown file
@@ -262,12 +250,12 @@ knitr::opts_chunk$set(echo = FALSE,
 
 `echo = FALSE` means the code will not be included by default - this is normally what you want in a report.
 
-Any output is included by default.
+Any output *is* included by default.
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -275,26 +263,38 @@ background-size: 100px
 
 ### References
 
-References and citations can be added by creating a .bib file containing references in BibTeX format and another line to the YAML header.  
+References and citations can be added by creating a .bib file containing references in BibTeX format and another line to the YAML header.
+
 
 --
 
-`bibliography: mybibfile.bib` must be added to the YAML header
+`bibliography: mybibfile.bib` must be added to the YAML header.&lt;sup&gt;1&lt;/sup&gt;
+.footnote[
+1. There are other ways of including references such as using `RefManageR` package which is what I am using in these slides.
 
---
+]
+
+
+---
+# Reproducible Reports: R Markdown
+
+## Your own R markdown file
+
+### References
 
 Citations are added using:
   *  blah blah blah `[@xaringan]` for blah blah blah &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan)).    
   *  Xie `[-@xaringan]` said blah blah blah for [Xie (2019)](#bib-xaringan) said blah blah blah.  
+
 
 --
 
 Every citation used results in the reference being added to a list at the bottom of the output.
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -315,9 +315,9 @@ Save as `mybibfile.bib`
 BibTeX format is also available through most referencing software (e.g., PaperPile).
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -341,9 +341,9 @@ myoglobin differed between  species.
 Save your file.
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -370,9 +370,9 @@ library(tidyverse)
 ]
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -398,9 +398,9 @@ We used R (R Core Team 2019) with tidyverse packages (Wickham 2017) for all anal
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -420,9 +420,9 @@ seal &lt;- read.table("raw_data/seal.txt", header = TRUE)
 ````
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -452,9 +452,9 @@ str(seal)
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -477,9 +477,9 @@ write.table(seal2,
 ````
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -507,9 +507,9 @@ sealsummary &lt;- seal %&gt;%
 ````
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -526,9 +526,9 @@ Knit your file
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -549,9 +549,9 @@ you will get
 The squareroot of 2 is  1.4142136
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -571,9 +571,9 @@ The highest mean is 49.01033
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -599,9 +599,9 @@ lowestspp &lt;- sealsummary$species[sealsummary$mean == lowestmean]
 ```
 ````
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -612,9 +612,9 @@ background-size: 100px
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -629,9 +629,9 @@ For example, to get `\(\bar{x} \pm s.e.\)` you write `$\bar{x} \pm s.e.$`
 
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # Reproducible Reports: R Markdown
 
@@ -639,9 +639,9 @@ background-size: 100px
 Go to live demo of document
 
 ---
-background-image: url(pics/rmarkdown.png)
-background-position: 100% 0%
-background-size: 100px
+
+
+
 
 # R Markdown Resources
 
@@ -697,7 +697,7 @@ Raton, Florida: Chapman and Hall/CRC. URL:
 
 class: inverse
 
-# 🥳 Congratulations! Keep practising! 🎉 
+# 🎉 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
