directory tree added to rs proj

--- a/slides/03_rstudio_projects.html
+++ b/slides/03_rstudio_projects.html
@@ -100,9 +100,20 @@ For example when `beewing.txt` is in:
 
   * a directory called 'data' which is in the directory above the wd: `../data/beewing.txt`  
 
---
+---
+# What is a path?
+
 
 ## Demonstration
+
+```
+-- thursday
+   |__beewing.txt
+   |__below_thursday
+   |__data
+      |__pigeon.txt
+```
+
 
 --
 
